@@ -1,0 +1,39 @@
+#!/bin/sh
+# Copyright 2006 Mike Kelly
+# Distributed under the terms of the GNU General Public License v2
+# $Id: $
+prefix=@prefix@
+datarootdir=@datarootdir@
+scriptdir=@datadir@/@PACKAGE@
+
+# Load the basic configuration
+. "${scriptdir}/common/config.sh"
+
+# Read the command line arguments.
+# Currently, we expect the following:
+DEADUSER=${1}
+PKGNAME=${2}
+USERSPACE=${3}
+ROOT=${4}
+
+# XXX: Make sure we verify command line args here.
+
+# first, verify that the user to be deleted can be safely deleted
+if [[ -s ${DBDIR}/user/${DEADUSER} ]] ; then
+	echo -n "User ${DEADUSER} is still in use by some other package. " >&2
+	echo "Not removing." >&2
+	exit 1
+fi
+
+for x in ${PASSWD_BACKENDS} ; do
+	if [[ -e "${scriptdir}/auth/${x}-${USERSPACE}-userdel.sh" ]] ; then
+		echo "Running ${i}-${USERSPACE}-userdel..."
+		. "${scriptdir}/auth/${x}-${USERSPACE}-userdel.sh"
+	else
+		echo -n "Auth backend ${x} with userspace ${USERSPACE} not" >&2
+		echo " supported by this script." >&2
+	fi
+done
+
+# Remove the empty database file
+rm ${DBDIR}/user/${DEADUSER}
